Removed commit with exposed api key

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Farmacia</string>
+    <string name="app_name">Nearby Places</string>
+    <string name="title_activity_maps">Nearby Places</string>
 </resources>
